# ChangeLog for dev-util/openldev
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Nov 2007; Marcello Magaldi (magowiz) <magowiz@gmail.com> +metadata.xml,
  +openldev-1.0.ebuild:
  New Ebuild for bug 90451 tanks to genstef
