@@ -1,4 +1,4 @@
 DIST openldev-1.0.tar.bz2 393000 RMD160 049558ddbc6fa7194f966ea42ef36e9a5614a0b5 SHA1 51d7782a34a4af4b3f9c7dbedbd36d8c124aa241 SHA256 79c0bda60e29a1a94e3873b20a0b70f1f2d95a3f0e90b1e8131652e990549bfb
-EBUILD openldev-1.0.ebuild 1248 RMD160 6452fa7b983a5ceea94868a48681d3345e5549e8 SHA1 d28e5f57a44687cc55cc9d1f445e2660a4081299 SHA256 994692f79320f6e83066b42ac23e337639744c9c7d2d0f0c17eb92df572ccf4c
-MISC ChangeLog 264 RMD160 c33d7807f1b4b967c6f989f85e0087e126e8b290 SHA1 d89e5fe8642998c17606c12f14a143377ab7fc09 SHA256 1373f06e69b9d19896e1478abf57322cabce8d40e747f631edeec673641ef4db
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+EBUILD openldev-1.0.ebuild 738 RMD160 c98062d1dd6fa1501229d4cd9a50015c21cf3c50 SHA1 eeb10a7544278256b31ed5824ab99b64b7194bc1 SHA256 12652aaef680739dc135b9737cb83a51899820e49e890fcfe4375bf70f131825
+MISC ChangeLog 400 RMD160 5b95e480314707d78a0c06cc9189a5800aac02cb SHA1 14c81795a85ca4ae0cd906245a47ac8b381dfad5 SHA256 d7be351f117d301dae987df12110e8be7ade2fe06a070f23c635a86e00dc8578
+MISC metadata.xml 513 RMD160 361221375672383eaaf604198553aa1376d21e0d SHA1 d8d74f24f5fa6b0c87cae6b2d5adbcd920a04c06 SHA256 07fbe28bc60d0a37a7bca18ab799bfb41dfbd6b15c13be70374d44a578dd2dc1
